--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">R4.11</string>
+    <string name="title_activity_formation_list">Formations</string>
+    <string name="title_activity_home">Accueil</string>
+    <string name="title_activity_login">Connexion</string>
 </resources>
