--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">R4.11</string>
     <string name="title_activity_formation_list">Formations</string>
-    <string name="title_activity_home">Accueil</string>
     <string name="title_activity_login">Connexion</string>
-    <string name="title_activity_profile">Profile</string>
+    <string name="title_activity_profile">Profil</string>
     <string name="title_activity_students">Students</string>
 </resources>
